Fix bullet alignment

--- a/css/career/job.css
+++ b/css/career/job.css
@@ -108,7 +108,7 @@
   
  .details ul li .fas {
   margin-right: 8px;
-  margin-top: 6px;
+  margin-top: 8px;
   color: #24aec3;
   font-size: 1rem;
 }
